--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import './scss/colors';
-@import './scss/layout';
+@import './scss/colors.scss';
+@import './scss/layout.scss';
 
 body {
   line-height: $g3;
