--- a/src/styleguide/Card/Card.scss
+++ b/src/styleguide/Card/Card.scss
@@ -1,5 +1,5 @@
-@import 'scss/layout';
-@import 'scss/colors';
+@import 'scss/layout.scss';
+@import 'scss/colors.scss';
 
 .card {
   border: $g1 solid $neutral-2;
