--- a/src/styleguide/Card/Card.scss
+++ b/src/styleguide/Card/Card.scss
@@ -5,6 +5,7 @@
   border: $g1 solid $neutral-2;
   border-radius: $g1;
   background: $neutral-4;
+  max-width: 600px;
 
   &--title {
     border-bottom: 4px solid $neutral-2;
