--- a/src/App.css
+++ b/src/App.css
@@ -3,20 +3,14 @@ body {
   color: #001d29;
   font-size: 16px; }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white; }
+.app--header {
+  background-color: #013340;
+  padding: 24px;
+  color: #fff; }
 
-.App-title {
-  font-size: 1.5em; }
+.app--title {
+  text-align: center; }
 
-.App-intro {
-  font-size: large; }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
+.app--wrapper {
+  margin: auto;
+  max-width: 960px; }
