[FEAT] Add Races/Classes/Skills and AP consumtion for each skill per turn. Rework calls to Character from Characters container

--- a/src/Components/Characters/Character.css
+++ b/src/Components/Characters/Character.css
@@ -1,3 +1,9 @@
+.card {
+  margin-top: 20px; }
+
+.button + .button {
+  margin-left: 20px; }
+
 .character--title {
   line-height: 32px;
   color: #013340;
