--- a/src/Components/Character/Character.scss
+++ b/src/Components/Character/Character.scss
@@ -1,6 +1,10 @@
 @import 'scss/layout.scss';
 @import 'scss/colors.scss';
 
+.card {
+  margin-top: 20px;
+}
+
 .character {
   &--title {
     line-height: $g4;
