--- a/src/styleguide/Button/Button.css
+++ b/src/styleguide/Button/Button.css
@@ -6,3 +6,15 @@
   cursor: pointer;
   padding: 8px 16px;
   color: #d95b43; }
+
+.button--disabled {
+  position: relative; }
+  .button--disabled:after {
+    position: absolute;
+    top: -1px;
+    right: -1px;
+    bottom: -1px;
+    left: -1px;
+    background: rgba(255, 255, 255, 0.8);
+    cursor: not-allowed;
+    content: ''; }
