ap combat system with redux

--- a/src/styleguide/Button/Button.scss
+++ b/src/styleguide/Button/Button.scss
@@ -24,6 +24,7 @@
       right: -1px;
       bottom: -1px;
       left: -1px;
+      border-radius: $g1;
       background: rgba(#fff, 0.8);
       cursor: not-allowed;
       content: '';
