--- a/src/styleguide/Button/Button.css
+++ b/src/styleguide/Button/Button.css
@@ -15,6 +15,7 @@
     right: -1px;
     bottom: -1px;
     left: -1px;
+    border-radius: 8px;
     background: rgba(255, 255, 255, 0.8);
     cursor: not-allowed;
     content: ''; }
