--- a/src/styleguide/Card/Card.scss
+++ b/src/styleguide/Card/Card.scss
@@ -2,13 +2,14 @@
 @import 'scss/colors.scss';
 
 .card {
-  border: $g1 solid $neutral-2;
+  border: 2px solid $neutral-2;
   border-radius: $g1;
+  box-shadow: 0 0 20px 4px rgba($neutral-2, 0.4);
   background: $neutral-4;
   max-width: 600px;
 
   &--title {
-    border-bottom: 4px solid $neutral-2;
+    border-bottom: 1px solid $neutral-2;
     padding: $g2;
   }
 
