--- a/src/App.css
+++ b/src/App.css
@@ -126,6 +126,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+a {
+  text-decoration: none;
+  color: inherit; }
+
 * {
   box-sizing: border-box; }
 
@@ -134,15 +138,3 @@ body {
   color: #001d29;
   font-size: 16px;
   font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif; }
-
-.app--header {
-  background-color: #013340;
-  padding: 8px;
-  color: #fff; }
-
-.app--title {
-  text-align: center; }
-
-.app--wrapper {
-  margin: auto;
-  max-width: 960px; }
