--- a/src/Components/Character/Character.css
+++ b/src/Components/Character/Character.css
@@ -1,3 +1,9 @@
+.character--standard-skills--item {
+  display: inline-flex;
+  justify-content: space-between;
+  width: 250px;
+  margin-right: 16px; }
+
 .card {
   margin-top: 20px; }
 
