--- a/src/Components/Characters/Character.css
+++ b/src/Components/Characters/Character.css
@@ -1,8 +1,8 @@
 .card {
   margin-top: 20px; }
 
-.button + .button {
-  margin-left: 20px; }
+.button {
+  margin-left: 8px; }
 
 .character--title {
   line-height: 32px;
