--- a/src/styleguide/Button/Button.css
+++ b/src/styleguide/Button/Button.css
@@ -5,8 +5,10 @@
   background: #ecd078;
   cursor: pointer;
   padding: 8px 16px;
+  vertical-align: middle;
   color: #d95b43;
-  overflow: hidden; }
+  overflow: hidden;
+  user-select: none; }
   .button:hover {
     background: #e6c04b; }
 
@@ -30,3 +32,13 @@
   z-index: 1;
   background: rgba(0, 29, 41, 0.3);
   cursor: not-allowed; }
+
+.button--small {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  line-height: 17px;
+  padding: 0;
+  text-transform: uppercase; }
