--- a/src/styleguide/Card/Card.css
+++ b/src/styleguide/Card/Card.css
@@ -2,8 +2,7 @@
   border: 2px solid #013340;
   border-radius: 8px;
   box-shadow: 0 0 20px 4px rgba(1, 51, 64, 0.4);
-  background: #93b8c2;
-  max-width: 600px; }
+  background: #93b8c2; }
   .card--title {
     border-bottom: 1px solid #013340;
     padding: 16px; }
