--- a/src/styleguide/Card/Card.scss
+++ b/src/styleguide/Card/Card.scss
@@ -6,7 +6,7 @@
   border-radius: $g1;
   box-shadow: 0 0 20px 4px rgba($neutral-2, 0.4);
   background: $neutral-4;
-  max-width: 600px;
+  // max-width: 600px;
 
   &--title {
     border-bottom: 1px solid $neutral-2;
