--- a/src/Components/Order/Order.css
+++ b/src/Components/Order/Order.css
@@ -2,5 +2,14 @@
   display: flex; }
   .order--char {
     margin-right: 24px; }
+    .order--char--name {
+      line-height: 24px;
+      padding: 0 8px; }
     .order--char:last-child {
       margin-right: 0; }
+    .order--char--playing:first-child .order--char--name {
+      border: 1px solid #ecd078;
+      border-radius: 4px;
+      box-shadow: 0 0 3px 3px rgba(236, 208, 120, 0.6);
+      font-size: 18px;
+      font-weight: bold; }
