--- a/src/Components/Order/Order.scss
+++ b/src/Components/Order/Order.scss
@@ -1,4 +1,5 @@
 @import 'src/scss/layout.scss';
+@import 'src/scss/colors.scss';
 
 .order {
   display: flex;
@@ -6,8 +7,31 @@
   &--char {
     margin-right: $g3;
 
+    &--name {
+      line-height: $g3;
+      padding: 0 $g1;
+    }
+
     &:last-child {
       margin-right: 0;
+    }
+
+    &--all {
+      // border: 1px solid red;
+    }
+
+    &--playing {
+      &:first-child {
+        .order--char {
+          &--name {
+            border: 1px solid $primary-1;
+            border-radius: 4px;
+            box-shadow: 0 0 3px 3px rgba($primary-1, 0.6);
+            font-size: 18px;
+            font-weight: bold;
+          }
+        }
+      }
     }
   }
 }
