--- a/src/App.scss
+++ b/src/App.scss
@@ -134,12 +134,42 @@ a {
 
 @import './scss/colors.scss';
 @import './scss/layout.scss';
+@import './scss/fonts.scss';
+
 * {
   box-sizing: border-box;
 }
 body {
   line-height: $g3;
-  color: $neutral-1;
+  background: $neutral-1;
+  color: $white;
   font-size: $g2;
-  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Rajdhani', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 300;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Cinzel Decorative';
+  color: $primary-1;
+  text-shadow: 0 0 10px white;
+}
+
+h1 {
+  font-size: $g5;
+  line-height: $g6;
+}
+h2 {
+  font-size: $g4;
+  line-height: $g5;
+}
+h3 {
+  font-size: $g3 - 4;
+  line-height: $g4 - 4;
+}
+h4 {
+  font-size: $g2;
+  line-height: $g3;
 }
