--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 v2.0 | 20110126
 License: none (public domain)
 */
+@import url("https://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700|Rajdhani:300,400,500,600,700");
 html,
 body,
 div,
@@ -135,6 +136,32 @@ a {
 
 body {
   line-height: 24px;
-  color: #001d29;
+  background: #001d29;
+  color: #fff;
   font-size: 16px;
-  font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif; }
+  font-family: 'Rajdhani', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 300; }
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Cinzel Decorative';
+  color: #add8e6;
+  text-shadow: 0 0 10px white; }
+
+h1 {
+  font-size: 40px;
+  line-height: 48px; }
+
+h2 {
+  font-size: 32px;
+  line-height: 40px; }
+
+h3 {
+  font-size: 20px;
+  line-height: 28px; }
+
+h4 {
+  font-size: 16px;
+  line-height: 24px; }
