--- a/src/Components/Character/Character.css
+++ b/src/Components/Character/Character.css
@@ -8,10 +8,8 @@
   margin-top: 20px; }
 
 .character--title {
-  line-height: 32px;
-  color: #013340;
-  font-size: 24px;
-  font-weight: bold; }
+  margin: 8px 0;
+  border-bottom: 1px solid rgba(173, 216, 230, 0.6); }
 
 .character--name {
   font-size: 40px;
