--- a/src/Components/Menu/style.css
+++ b/src/Components/Menu/style.css
@@ -1,46 +1,50 @@
-.menu--header {
-  background-color: #013340;
-  padding: 8px;
-  color: #fff; }
-  .menu--header--title {
-    text-align: center; }
-
-.menu--links {
-  display: flex;
-  padding-bottom: 1px;
-  background: #542437; }
-  .menu--links li {
-    flex-grow: 1; }
-    .menu--links li.menu--category {
-      flex-grow: 0; }
-  .menu--links .divider {
-    width: 3px;
-    background: #c02942; }
-
-.menu--link {
-  padding: 8px 16px;
-  background: #d95b43;
-  color: #fff;
-  text-align: center; }
-  .menu--link:hover {
-    background: #c24027; }
-  .menu--link--active {
-    position: relative; }
-    .menu--link--active:hover {
-      background: #d95b43; }
-    .menu--link--active:before {
-      position: absolute;
-      display: block;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      height: 3px;
-      background: #ecd078;
-      content: ''; }
-
-.menu--category {
-  padding: 8px 16px;
-  background: #53777a;
-  color: #fff;
-  text-align: center;
-  width: 150px; }
+.menu {
+  margin-bottom: 16px; }
+  .menu--header {
+    background-color: #013340;
+    padding: 16px;
+    margin-bottom: 2px; }
+    .menu--header--title {
+      text-align: center; }
+  .menu--links {
+    display: flex;
+    padding-bottom: 1px;
+    background: #001d29; }
+    .menu--links li {
+      flex-grow: 1; }
+      .menu--links li.menu--category {
+        flex-grow: 0; }
+  .menu--link {
+    transition: all ease-in-out 300ms;
+    padding: 8px 16px;
+    margin: 2px;
+    background: rgba(173, 216, 230, 0.2);
+    color: #fff;
+    text-align: center;
+    border: 1px solid #add8e6;
+    text-shadow: 0 0 2px #add8e6; }
+    .menu--link:hover {
+      background: rgba(173, 216, 230, 0.1);
+      box-shadow: 0 0 5px 1px rgba(173, 216, 230, 0.7);
+      border-color: #fff; }
+    .menu--link--active {
+      position: relative; }
+      .menu--link--active:hover {
+        background: rgba(173, 216, 230, 0.1); }
+      .menu--link--active:before {
+        position: absolute;
+        display: block;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        height: 3px;
+        background: #add8e6;
+        content: ''; }
+  .menu--category {
+    padding: 8px 16px;
+    background: rgba(35, 100, 117, 0.3);
+    color: #add8e6;
+    text-align: center;
+    width: 150px;
+    text-transform: uppercase;
+    font-weight: 500; }
