--- a/src/Components/Order/Order.css
+++ b/src/Components/Order/Order.css
@@ -1,15 +1,31 @@
 .order {
   display: flex; }
   .order--char {
+    position: relative;
     margin-right: 24px; }
-    .order--char--name {
-      line-height: 24px;
-      padding: 0 8px; }
+    .order--char--button {
+      position: absolute;
+      top: 0;
+      right: 0; }
+    .order--char--input {
+      -webkit-appearance: none;
+      border: 0;
+      font-size: 16px;
+      background: transparent;
+      color: #fff;
+      font-family: inherit;
+      background: rgba(83, 119, 122, 0.3);
+      padding: 4px 8px;
+      width: 150px; }
+      .order--char--input:focus {
+        outline: 1px solid rgba(173, 216, 230, 0.2);
+        box-shadow: 0 0 5px -1px rgba(173, 216, 230, 0.6); }
     .order--char:last-child {
       margin-right: 0; }
+    .order--char--playing .order--char--name {
+      padding: 4px 8px; }
     .order--char--playing:first-child .order--char--name {
-      border: 1px solid #ecd078;
-      border-radius: 4px;
-      box-shadow: 0 0 3px 3px rgba(236, 208, 120, 0.6);
-      font-size: 18px;
-      font-weight: bold; }
+      border: 1px solid #53777a;
+      border-radius: 2px;
+      box-shadow: 0 0 5px 2px rgba(83, 119, 122, 0.6);
+      font-size: 18px; }
