--- a/src/Components/Order/Order.scss
+++ b/src/Components/Order/Order.scss
@@ -5,11 +5,35 @@
   display: flex;
 
   &--char {
+    position: relative;
     margin-right: $g3;
 
+    &--button {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+
+    &--input {
+      -webkit-appearance: none;
+      border: 0;
+      font-size: $g2;
+      background: transparent;
+      color: $white;
+      font-family: inherit;
+      background: rgba($accent-4, 0.3);
+      padding: $g1/2 $g1;
+      width: 150px;
+
+      &:focus {
+        outline: 1px solid rgba($primary-1, 0.2);
+        box-shadow: 0 0 5px -1px rgba($primary-1, 0.6);
+      }
+    }
+
     &--name {
-      line-height: $g3;
-      padding: 0 $g1;
+      // line-height: $g3;
+      // padding: 0 $g1;
     }
 
     &:last-child {
@@ -21,14 +45,17 @@
     }
 
     &--playing {
+      .order--char--name {
+        padding: $g1/2 $g1;
+      }
       &:first-child {
         .order--char {
           &--name {
-            border: 1px solid $primary-1;
-            border-radius: 4px;
-            box-shadow: 0 0 3px 3px rgba($primary-1, 0.6);
+            border: 1px solid $accent-4;
+            border-radius: 2px;
+            box-shadow: 0 0 5px 2px rgba($accent-4, 0.6);
             font-size: 18px;
-            font-weight: bold;
+            // font-weight: bold;
           }
         }
       }
