--- a/src/styleguide/Button/Button.scss
+++ b/src/styleguide/Button/Button.scss
@@ -2,27 +2,88 @@
 @import 'scss/colors.scss';
 
 %button {
+  transition: all ease-in-out 300ms;
   position: relative;
-  display: inline-block;
-  border-radius: $g1;
-  background: $primary-1;
+  display: inline-flex;
+  border: 1px solid $primary-1;
+  background: rgba($primary-1, 0.2);
   cursor: pointer;
   padding: $g1 $g2;
   vertical-align: middle;
-  color: $accent-1;
-  overflow: hidden;
+  color: $primary-1;
+  text-shadow: 0 0 3px $primary-1;
+  box-shadow: 0 0 2px $primary-1;
   user-select: none;
+  text-transform: uppercase;
 
   &:hover {
-    background: darken($primary-1, 10%);
+    background: rgba($primary-1, 0.1);
+    border-color: rgba($white, 0.7);
+    color: $white;
+    box-shadow: 0 0 5px 1px rgba($primary-1, 0.7);
   }
 }
 
 .button {
   @extend %button;
 
+  &--accent-1 {
+    border: 1px solid $accent-1;
+    background: rgba($accent-1, 0.2);
+    color: $accent-1-l;
+    .button--corner {
+      &.top {
+        border-top-color: rgba($accent-1-l, 1);
+      }
+      &.bottom {
+        border-bottom-color: rgba($accent-1-l, 1);
+      }
+      &.right {
+        border-right-color: rgba($accent-1-l, 1);
+      }
+      &.left {
+        border-left-color: rgba($accent-1-l, 1);
+      }
+    }
+    &:hover {
+      background: rgba($accent-1, 0.1);
+      color: lighten($accent-1, 25%);
+      box-shadow: 0 0 5px 1px rgba($accent-1, 0.7);
+    }
+  }
+
+  &--corner {
+    position: absolute;
+    background: transparent;
+    border: 2px solid transparent;
+    width: $g2 - 1;
+    height: $g2 - 1;
+
+    &.top {
+      top: -2px;
+      border-top-color: rgba($white, 0.7);
+    }
+    &.bottom {
+      bottom: -2px;
+      border-bottom-color: rgba($white, 0.7);
+    }
+    &.right {
+      right: -2px;
+      border-right-color: rgba($white, 0.7);
+    }
+    &.left {
+      left: -2px;
+      border-left-color: rgba($white, 0.7);
+    }
+  }
+
   &--disabled {
     position: relative;
+
+    &:hover {
+      background: rgba($primary-1, 0.2);
+      border-color: $primary-1;
+    }
 
     &:after {
       position: absolute;
@@ -30,7 +91,7 @@
       right: 0;
       bottom: 0;
       left: 0;
-      background: rgba(#fff, 0.8);
+      background: rgba($white, 0.4);
       cursor: not-allowed;
       content: '';
     }
@@ -48,12 +109,16 @@
 
   &--small {
     display: inline-flex;
-    align-items: center;
     justify-content: center;
-    width: $g2;
-    height: $g2;
-    line-height: $g2 + 1;
+    width: $g3;
+    height: $g3;
+    line-height: $g3;
     padding: 0;
     text-transform: uppercase;
+
+    .button--corner {
+      width: $g1;
+      height: $g1;
+    }
   }
 }
