--- a/src/styleguide/Card/Card.css
+++ b/src/styleguide/Card/Card.css
@@ -1,10 +1,28 @@
 .card {
-  border: 2px solid #013340;
-  border-radius: 8px;
-  box-shadow: 0 0 20px 4px rgba(1, 51, 64, 0.4);
-  background: #93b8c2; }
+  position: relative;
+  border: 1px solid #add8e6;
+  box-shadow: 0 0 10px 2px rgba(173, 216, 230, 0.4);
+  background: #001d29; }
   .card--title {
-    border-bottom: 1px solid #013340;
+    border-bottom: 1px solid rgba(173, 216, 230, 0.6);
     padding: 16px; }
   .card--content {
     padding: 16px; }
+  .card--corner {
+    position: absolute;
+    background: transparent;
+    border: 3px solid transparent;
+    width: 24px;
+    height: 24px; }
+    .card--corner.top {
+      top: -2px;
+      border-top-color: rgba(255, 255, 255, 0.7); }
+    .card--corner.bottom {
+      bottom: -2px;
+      border-bottom-color: rgba(255, 255, 255, 0.7); }
+    .card--corner.right {
+      right: -2px;
+      border-right-color: rgba(255, 255, 255, 0.7); }
+    .card--corner.left {
+      left: -2px;
+      border-left-color: rgba(255, 255, 255, 0.7); }
