--- a/src/styleguide/Spinner/Spinner.scss
+++ b/src/styleguide/Spinner/Spinner.scss
@@ -1,134 +1,62 @@
 @import 'scss/layout.scss';
 @import 'scss/colors.scss';
 
-.spinner--container {
-  position: fixed;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
 .spinner {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  color: $primary-1;
-  text-shadow: 2px 2px $white;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -25px;
-  margin-left: -25px;
-  width: 50px;
-  height: 50px;
-  text-align: center;
-  &:after {
-    content: '';
+  &--outer {
+    border-top: 5px solid $primary-1;
+    border-bottom: 5px solid $primary-1;
+    box-shadow: 0 0 8px $primary-1;
+  }
+
+  &--circle {
+    top: 50%;
+    left: 50%;
     display: block;
     position: absolute;
-    top: 0;
-    left: 0;
-    margin-top: -12px;
-    margin-left: -12px;
-    width: 70px;
-    height: 70px;
+    transition: all 250ms ease-out;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
     border-radius: 50%;
-    border: 2px solid;
-    -webkit-animation: rotation-z 2s linear 0s infinite;
-    animation: rotation-z 2s linear 0s infinite;
+    background-color: transparent;
   }
-  .part {
-    border-radius: 50%;
-    display: inline-block;
+
+  &--large {
+    width: 50px;
+    height: 50px;
+    animation: arwes-loading-circle1 750ms infinite linear;
+    margin-top: -25px;
+    margin-left: -25px;
   }
-  > .part {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    border: 5px solid transparent;
-    border-left: 5px solid;
-    -webkit-animation: stop 3s cubic-bezier(0.28, 1.9, 1, 0.9), rotation-left 2s linear 0s infinite forwards;
-    animation: stop 3s cubic-bezier(0.28, 1.9, 1, 0.9), rotation-left 2s linear 0s infinite forwards;
-  }
-  > .part > .part {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    border: 5px solid transparent;
-    border-left: 5px solid;
-    -webkit-animation: stop 3s cubic-bezier(0.28, 1.9, 1, 0.9), rotation-right 1s linear 0s infinite forwards;
-    animation: stop 3s cubic-bezier(0.28, 1.9, 1, 0.9), rotation-right 1s linear 0s infinite forwards;
-  }
-  > .part > .part > .part {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    border: 4px solid transparent;
-    border-left: 4px solid;
-    -webkit-animation: stop 3s cubic-bezier(0.28, 1.9, 1, 0.9), rotation-left 3s linear 0s infinite forwards;
-    animation: stop 3s cubic-bezier(0.28, 1.9, 1, 0.9), rotation-left 3s linear 0s infinite forwards;
-  }
-  > .part > .part > .part > .part {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    border: 3px solid transparent;
-    border-left: 3px solid;
-    -webkit-animation: stop 3s cubic-bezier(0.28, 1.9, 1, 0.9), rotation-right 10s linear 0s infinite forwards;
-    animation: stop 3s cubic-bezier(0.28, 1.9, 1, 0.9), rotation-right 10s linear 0s infinite forwards;
-  }
-  > .part > .part > .part > .part > .part {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    border: 3px solid transparent;
-    border-left: 3px solid;
-    -webkit-animation: stop 3s cubic-bezier(0.28, 1.9, 1, 0.9), rotation-left 1s linear 0s infinite forwards;
-    animation: stop 3s cubic-bezier(0.28, 1.9, 1, 0.9), rotation-left 1s linear 0s infinite forwards;
-    border-right: 3px solid;
+
+  &--small {
+    width: 30px;
+    height: 30px;
+    animation: arwes-loading-circle2 750ms infinite linear;
+    margin-top: -15px;
+    margin-left: -15px;
   }
 }
-@keyframes stop {
-  from {
-    -webkit-transform: rotate(360deg);
+
+@keyframes arwes-loading-circle1 {
+  0% {
+    opacity: 0;
+    transform: rotate(160deg);
+  }
+
+  50% {
+    opacity: 1;
+    transform: rotate(145deg);
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(-320deg);
+  }
+}
+@keyframes arwes-loading-circle2 {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
     transform: rotate(360deg);
-  }
-  to {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-}
-@keyframes rotation-z {
-  from {
-    -webkit-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-  }
-  to {
-    -webkit-transform: rotateY(360deg);
-    transform: rotateY(360deg);
-  }
-}
-@keyframes rotation-right {
-  from {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-@keyframes rotation-left {
-  from {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(-360deg);
-    transform: rotate(-360deg);
   }
 }
