--- a/src/Components/Character/Character.scss
+++ b/src/Components/Character/Character.scss
@@ -2,6 +2,7 @@
 @import 'scss/colors.scss';
 
 %list-item {
+  position: relative;
   display: inline-flex;
   justify-content: space-between;
   width: 250px;
@@ -76,8 +77,29 @@
   }
 
   &--standard-skills {
+    overflow: hidden;
+
+    &:hover {
+      overflow: visible;
+    }
+
     &--item {
       @extend %list-item;
+
+      &--difficulty {
+        position: absolute;
+        top: 0;
+        right: $g8;
+        left: 0;
+        z-index: 1;
+        opacity: 0;
+      }
+
+      &--base:hover {
+        .character--standard-skills--item--difficulty {
+          opacity: 1;
+        }
+      }
     }
   }
 
