--- a/src/App.css
+++ b/src/App.css
@@ -202,6 +202,13 @@ textarea {
   textarea:focus {
     outline: 1px solid rgba(173, 216, 230, 0.2);
     box-shadow: 0 0 5px -1px rgba(173, 216, 230, 0.6); }
+  input[type='number']::-webkit-inner-spin-button, input[type='number']::-webkit-outer-spin-button,
+  select[type='number']::-webkit-inner-spin-button,
+  select[type='number']::-webkit-outer-spin-button,
+  textarea[type='number']::-webkit-inner-spin-button,
+  textarea[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0; }
 
 input[type='checkbox'] {
   -webkit-appearance: initial;
