--- a/src/App.css
+++ b/src/App.css
@@ -173,7 +173,8 @@ h4 {
   right: 0;
   bottom: 0;
   left: 0;
-  background: rgba(0, 29, 41, 0.8); }
+  background: rgba(0, 29, 41, 0.8);
+  z-index: 1; }
 
 .modal--content {
   position: absolute;
