--- a/src/Components/Character/Character.css
+++ b/src/Components/Character/Character.css
@@ -1,10 +1,3 @@
-.character--standard-skills--item {
-  position: relative;
-  display: inline-flex;
-  justify-content: space-between;
-  width: 250px;
-  margin-right: 16px; }
-
 .card {
   margin-top: 20px; }
 
@@ -48,27 +41,45 @@
   .character--skill:hover .character--skill--infos {
     display: block; }
 
-.character--attributes--elem span {
-  display: inline-block;
-  width: 160px;
-  margin-right: 40px; }
-
-.character--standard-skills {
-  overflow: hidden; }
-  .character--standard-skills:hover {
-    overflow: visible; }
-  .character--standard-skills--item--difficulty {
-    position: absolute;
-    top: 0;
-    right: 64px;
-    left: 0;
-    z-index: 1;
-    opacity: 0; }
-  .character--standard-skills--item--base:hover .character--standard-skills--item--difficulty {
-    opacity: 1; }
+.character--attributes--elem {
+  display: flex;
+  width: 33.33%;
+  padding-right: 10.66667px; }
+  .character--attributes--elem span {
+    flex-grow: 1; }
 
 .character--skills {
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-right: -16px;
+  padding-top: 2px;
+  padding-bottom: 2px; }
+  .character--skills__standard {
+    max-height: 196px; }
+  .character--skills__pro {
+    max-height: 316px; }
+  .character--skills:hover {
+    overflow: visible; }
+  .character--skills--item {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    width: 33.33%;
+    padding-right: 16px; }
+    .character--skills--item--difficulty {
+      position: absolute;
+      top: 0;
+      right: 80px;
+      left: 0;
+      z-index: 1;
+      opacity: 0; }
+    .character--skills--item--base:hover .character--skills--item--difficulty {
+      opacity: 1; }
+
+.character--combat-skills {
   display: flex; }
-  .character--skills--action {
+  .character--combat-skills--action {
     display: flex;
     flex-direction: column; }
